--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 colorama==0.4.6
 Faker==21.0.0
 fastapi==0.105.0
+greenlet==3.0.2
 h11==0.14.0
 idna==3.6
 psycopg2==2.9.9
@@ -12,6 +13,7 @@ pydantic_core==2.14.5
 python-dateutil==2.8.2
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.23
 starlette==0.27.0
 typing_extensions==4.9.0
 uvicorn==0.24.0.post1
