--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,10 @@
 annotated-types==0.6.0
 anyio==3.7.1
+attrs==23.1.0
+beautifulsoup4==4.12.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Faker==21.0.0
@@ -7,13 +12,33 @@ fastapi==0.105.0
 greenlet==3.0.2
 h11==0.14.0
 idna==3.6
+lxml==4.9.3
+numpy==1.26.2
+outcome==1.3.0.post0
+packaging==23.2
+pandas==2.1.4
 psycopg2==2.9.9
+pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
+PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+requests==2.31.0
+selenium==4.16.0
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
 starlette==0.27.0
+tqdm==4.66.1
+trio==0.23.2
+trio-websocket==0.11.1
 typing_extensions==4.9.0
+tzdata==2023.3
+urllib3==2.1.0
 uvicorn==0.24.0.post1
+webdriver-manager==4.0.1
+wsproto==1.2.0
